--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,4 +50,7 @@ jobs:
           host: ${{ secrets.EC2_PUBLIC_IP }}
           username: ec2-user
           key: ${{ secrets.EC2_SSH_KEY }}
-          script: whoami      
+          script: |
+           docker pull $IMAGE_URI:latest
+           docker stop app || true && docker rm app || true
+           docker run -d -p 80:8080 app $IMAGE_URI:latest
