--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   Build-Deploy:
-    environment: dev
+    environment: qa
     runs-on: ubuntu-latest
     steps:
       - name: checkout repositry
