--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,6 +6,7 @@ on:
      - '.github/workflows/terraform.yml'
 jobs:
   terraform:
+    environment: qa
     runs-on: ubuntu-latest
     steps:
       - name: Configure AWS Credentials
